# mini-pi0

./: .gitignore  README.md  action_stats.json  collect_demos.py  constraints-maniskill-lerobot.txt  deploy.py  deploy_so100.py  eval.py  precompute_vision.py  pyproject.toml  requirements.txt  train.py  visualize_episodes.py
docs/: DATALOADER.md  DATASETS.md  PEG_INSERTION.md  ROBOT_DATASET_MAPPING.md  SIMULATION.md  TASK_BENCHMARK.md
examples/configs/: isaaclab_scaffold.yaml  maniskill3_multiobject_tray.yaml  maniskill3_multiobject_tray_cnn1d_resnet.yaml  maniskill3_peginsertion_motionplanning_transformer_vit_hist2_medium.yaml  maniskill3_peginsertion_motionplanning_transformer_vit_hist2_medium_holecam.yaml  maniskill3_pickcube.yaml  robosuite_can_crossflow.yaml  (+21 more)
mini_pi0/: __init__.py  __main__.py
tests/: test_config.py  test_crossflow_model.py  test_data_pipeline.py  test_eval_grid_camera.py  test_eval_weight_source.py  test_fm_architecture.py  test_lerobot_loader.py  test_lerobot_v3.py  test_maniskill_collect_append.py  test_maniskill_collector_registry.py  test_maniskill_convert.py  test_maniskill_domain_randomization.py  test_maniskill_oracle_mixture.py  test_model_registry.py  test_parity.py  test_robomimic_download.py  test_robot_dataset_mapping.py  test_runs.py  test_runtime_precision.py  test_sim_registry.py  test_training_stability_controls.py  test_vision_pipeline.py
tools/: prepare_peginsertion_holecam_contacts.sh  prepare_peginsertion_pd_ee_delta_pose.sh  prepare_pullcubetool_pd_ee_delta_pose.sh  prepare_stackpyramid_pd_ee_delta_pose.sh  replay_maniskill_contacts.py  replay_maniskill_local_env.py  visualize_peginsertion_cameras.py
(+69 files in other folders)
